--- a/TASK1/index.html
+++ b/TASK1/index.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Landing Page</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Header Section -->
+  <header class="header">
+    <div class="container">
+      <h1>Welcome to My Landing Page</h1>
+      <p>Your gateway to amazing web experiences.</p>
+      <a href="#services" class="btn">Explore More</a>
+    </div>
+  </header>
+
+  <!-- Features Section -->
+  <section id="features" class="features-section">
+    <div class="container">
+      <h2>Key Features</h2>
+      <div class="feature-grid">
+        <div class="feature-box">
+          <h3>Feature 1</h3>
+          <p>Responsive and mobile-friendly design to ensure great user experience on any device.</p>
+        </div>
+        <div class="feature-box">
+          <h3>Feature 2</h3>
+          <p>Fast load times with optimized code for enhanced performance.</p>
+        </div>
+        <div class="feature-box">
+          <h3>Feature 3</h3>
+          <p>Clean, modern layout with easy navigation for improved usability.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="services-section">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="service-grid">
+        <div class="service-box">
+          <h3>Web Design</h3>
+          <p>Beautiful, functional websites crafted to meet your specific needs.</p>
+        </div>
+        <div class="service-box">
+          <h3>SEO Optimization</h3>
+          <p>Boost your online presence with our tailored SEO solutions.</p>
+        </div>
+        <div class="service-box">
+          <h3>Web Development</h3>
+          <p>High-quality web development services to bring your ideas to life.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section">
+    <div class="container">
+      <h2>Get In Touch</h2>
+      <form action="#" class="contact-form">
+        <input type="text" name="name" placeholder="Your Name">
+        <input type="email" name="email" placeholder="Your Email">
+        <textarea name="message" rows="5" placeholder="Your Message"></textarea>
+        <button type="submit" class="btn">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer class="footer">
+    <p>&copy; 2024 My Landing Page. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
