--- a/Task2/index.html
+++ b/Task2/index.html
@@ -1,1 +1,100 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+  <!-- Header Section -->
+  <header class="header">
+    <div class="container">
+      <h1>Rahul Kumar</h1>
+      <p>Aspiring Web Developer | Test</p>
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="about-section">
+    <div class="container">
+      <h2>About Me</h2>
+      <img src="images/image.png" alt="Profile Picture" class="profile-img">
+      <p>Hello! I'm a web developer passionate about creating stunning web designs and improving user experiences. With expertise in HTML, CSS, and JavaScript, I build responsive websites that deliver a seamless experience across all devices.</p>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills" class="skills-section">
+    <div class="container">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li><i class="fas fa-code"></i> HTML & CSS</li>
+        <li><i class="fas fa-laptop-code"></i> JavaScript</li>
+        <li><i class="fas fa-database"></i> Database Management</li>
+        <li><i class="fas fa-paint-brush"></i> Web Design</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="projects-section">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="project-grid">
+        <div class="project-item">
+          <img src="images/project1.jpg" alt="Project 1">
+          <h3>Project Title 1</h3>
+          <p>Short description of the project.</p>
+        </div>
+        <div class="project-item">
+          <img src="images/project2.jpg" alt="Project 2">
+          <h3>Project Title 2</h3>
+          <p>Short description of the project.</p>
+        </div>
+        <div class="project-item">
+          <img src="images/project3.jpg" alt="Project 3">
+          <h3>Project Title 3</h3>
+          <p>Short description of the project.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Resume Section -->
+  <section id="resume" class="resume-section">
+    <div class="container">
+      <h2>Resume</h2>
+      <a href="resume.pdf" class="btn btn-primary" download>Download Resume</a>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section">
+    <div class="container">
+      <h2>Contact Me</h2>
+      <form action="#" class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit" class="btn">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer class="footer">
+    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <div class="social-links">
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
